<resources>
    <string name="app_name">Dice Game</string>
    <string name="welcome">Good lucky! %s</string>
    <string name="name">Player Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gameButtonText">Play Game</string>
    <string name="registerButtonText">Register Player</string>
    <string name="share_button_description_content">Share Button</string>
    <string name="dice_1_description_content">Dice 1</string>
    <string name="dice_2_description_content">Dice 2</string>
</resources>