<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="70dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/dado1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dado1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="98dp"
        android:contentDescription="@string/dice_1_description_content"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toStartOf="@+id/dado2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/dado2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="53dp"
        android:contentDescription="@string/dice_2_description_content"
        app:layout_constraintBottom_toBottomOf="@+id/dado1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dado1"
        app:layout_constraintTop_toTopOf="@+id/dado1"
        app:srcCompat="@drawable/dice_3" />

    <Button
        android:id="@+id/playGame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/green_red_color_state"
        android:text="@string/gameButtonText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="45dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/share_button_description_content"
        app:layout_constraintBottom_toTopOf="@+id/playGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dado1"
        tools:src="?attr/actionModeShareDrawable"
        app:srcCompat="@android:drawable/ic_menu_share" />

</androidx.constraintlayout.widget.ConstraintLayout>